# GenshinXXL

./: .gitignore  CMakeLists.txt  CharacterImages.cpp  CharacterImages.h  CharacterWidget.cpp  CharacterWidget.h  CountdownWidget.cpp  CountdownWidget.h  QCharaContainer.cpp  QCharaContainer.h  QCharacter.cpp  QCharacter.h  QPushButtonWithHoverSignal.cpp  QPushButtonWithHoverSignal.h  Themes.cpp  Themes.h  difficultybrief.cpp  difficultybrief.h  difficultybrief.ui  externs.h  gamewidget.cpp  gamewidget.h  gamewidget.qss  gamewidget.ui  gamewindow.cpp  gamewindow.h  gamewindow.ui  levelmenu.cpp  levelmenu.h  levelmenu.ui  main.cpp  startmenu.cpp  startmenu.h  startmenu.qss  startmenu.ui
profiles.d/: genshin.json
utils/: Characters.cpp  Characters.h  Characters.hpp
